# spicy-wireshark

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  TODO  configure
.github/workflows/: check.yml
cmake/: FindSpicy.cmake  FindWireshark.cmake  project-version.sh
lib/: wireshark.spicy
src/: CMakeLists.txt  plugin-config.h.in  plugin.cc  plugin.h  tree-builder.cc  tree-builder.h  util.h
tests/: btest.cfg
tests/Baseline/wireshark.all-types/: output.txt
tests/Baseline/wireshark.echo-ws/: output
tests/Baseline/wireshark.http-ws/: output
tests/Baseline/wireshark.tftp-ws/: output
tests/Scripts/: canonify-tshark
tests/Traces/: all-types.pcap  echo.pcap  generate-all-types.py  generate-echo.py  generate-http-reordered.py  generate-http.py  generate-tftp.py  http.pcap  tftp.pcap
tests/wireshark/: all-types.spicy  echo-ws.spicy  http-ws.spicy  tftp-ws.spicy
